--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,32 @@
 .container {
+    background-color: #042b47;
     min-height: 100vh;
     overflow: hidden;
     display: block;
     position: relative;
     padding-bottom: 100px;
+}
+
+h1 {
+  color: white;
+}
+
+h2 {
+  color: white;
+}
+
+h3 {
+  color: white;
+}
+
+h4 {
+  color: white;
+}
+
+h5 {
+  color: white;
+}
+
+h6 {
+  color: white;
 }
