--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,11 +1,6 @@
 .landing-container {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.landing-container {
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
