deejay profile semantic/css

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -25,3 +25,25 @@
 .booker-profile-update-phone {
   width: 300px;
 } */
+
+
+.deejay-profile-container {
+  /* margin: auto; */
+  width: 50%
+}
+
+/* .deejay-profile-detail {
+  margin: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
+
+/* .deejay-profile-update {
+  width: 300px;
+}
+
+.deejay-profile-update-phone {
+  width: 300px;
+} */
