--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -6,25 +6,25 @@
 }
 
 .booker-profile-container {
-  /* margin: auto; */
-  width: 50%
+  margin: auto;
+  width: 50%;
 }
 
-/* .booker-profile-detail {
-  margin: 0;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-
-/* .booker-profile-update {
-  width: 300px;
+.booker-update-button {
+  text-align: center;
+  margin: auto;
+  width: 50%;
 }
 
-.booker-profile-update-phone {
-  width: 300px;
-} */
+.booker-profile-detail {
+  margin: auto;
+  width: 50%;
+}
+
+.booker-profile-update {
+  margin: auto;
+  width: 50%;
+}
 
 
 .deejay-profile-container {
