--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #042b47;
+    /* background-color: #042b47; */
     min-height: 100vh;
     overflow: hidden;
     display: block;
@@ -7,7 +7,7 @@
     padding-bottom: 100px;
 }
 
-h1 {
+/* h1 {
   color: white;
 }
 
@@ -29,4 +29,4 @@ h5 {
 
 h6 {
   color: white;
-}
+} */
