deejays can view booker list

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,5 @@
 .container {
-    /* background-color: #042b47; */
+    background-color: #042b47;
     min-height: 100vh;
     overflow: hidden;
     display: block;
