calendar renders new colored cell for past bookings

--- a/client/components/Calendar/calendar.css
+++ b/client/components/Calendar/calendar.css
@@ -181,7 +181,7 @@ main {
   border-image-slice: 1;
 }
 
-.calendar .body .past {
+.calendar .body .marked {
   border-left: 10px solid transparent;
   border-image: linear-gradient(45deg, #800080 0%,#53cbf1 40%);
   border-image-slice: 1;
